--- a/members/templates/all_members.html
+++ b/members/templates/all_members.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 
-<h1>Members in {{ name }}'s club</h1> 
-  
-<ul>
-  {% for x in mymembers %}
-    <li><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
-  {% endfor %}
-</ul>
+  <h1>Members in {{ name }}'s club</h1>
+
+  <ul>
+    {% for x in mymembers %}
+    <li><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a>
+      {% if x.court %}
+      - Court: {{ x.court.number }}
+      {% else %}
+      - No court assigned
+      {% endif %}</li>
+
+    {% endfor %}
+  </ul>
 
 </body>
+
 </html>
